# scribe

./: Cargo.toml  PRD.md  README.md  SPEC.md  build.rs
src/: audio.rs  chunker.rs  local.rs  main.rs  mixer.rs  pipeline.rs  transcribe.rs
src/capture/: mic.rs  mod.rs  system.rs
