[package]
name = "scribe"
version = "0.1.0"
edition = "2024"

[dependencies]
cpal = "0.17.1"
ctrlc = "3.5.2"
hound = "3.5.1"
libc = "0.2"
reqwest = { version = "0.12", features = ["blocking", "json", "multipart"] }
rubato = "0.16"
screencapturekit = "1.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
